kubernetes/djapp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djapp-deploy
  labels:
    project: django
spec:
  replicas: 3
  selector:
    matchLabels:
      entity: djapp-pod
  template:
    metadata:
      labels:
        entity: djapp-pod
    spec:
      containers:
      - name: djapp-container
        image: django_app:latest
        imagePullPolicy: IfNotPresent
