kubernetes/djapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djapp-ingress
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: djapp-service
            port:
              number: 80
